# raylib-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: game.h
src/: main.c
